--- a/airflow/.env
+++ b/airflow/.env
@@ -1,1 +1,15 @@
 AIRFLOW_UID=1000
+
+_PIP_ADDITIONAL_REQUIREMENTS=${_PIP_ADDITIONAL_REQUIREMENTS:- pyarrow==5.0.0 apache-airflow==2.2.4 apache-airflow-providers-google==6.2.0 pyspark==3.2.0 openpyxl==3.0.9}
+
+# Airflow
+AIRFLOW__CORE__EXECUTOR=LocalExecutor
+AIRFLOW__SCHEDULER__SCHEDULER_HEARTBEAT_SEC=10
+AIRFLOW_VAR__METADATA_DB_SCHEMA=airflow
+
+_AIRFLOW_WWW_USER_CREATE=True
+_AIRFLOW_WWW_USER_USERNAME=${_AIRFLOW_WWW_USER_USERNAME:airflow}
+_AIRFLOW_WWW_USER_PASSWORD=${_AIRFLOW_WWW_USER_PASSWORD:airflow}
+
+AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION=True
+AIRFLOW__CORE__LOAD_EXAMPLES=False
