--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
 /terraform/.terraform
+/terraform/*.tfstate
+/terraform/*.lock.hcl
 /airflow/logs
 /airflow/dags/__pycache__
 .ipynb_checkpoints
+
+
+dags/__pycache__
+.env
+
+*.ipynb
