--- a/airflow/docker-compose.yaml
+++ b/airflow/docker-compose.yaml
@@ -60,8 +60,8 @@ x-airflow-common:
     AIRFLOW_CONN_GOOGLE_CLOUD_DEFAULT: 'google-cloud-platform://?extra__google_cloud_platform__key_path=/.google/credentials/google_credentials.json'
 
     # TODO: Please change GCP_PROJECT_ID & GCP_GCS_BUCKET, as per your config
-    GCP_PROJECT_ID: 'electric-goods-340611'
-    GCP_GCS_BUCKET: 'dtc_data_lake_electric-goods-340611'
+    GCP_PROJECT_ID: 'wse-data-345914'
+    GCP_GCS_BUCKET: ' data_lake_wse-data-345914'
     
   volumes:
     - ./dags:/opt/airflow/dags
