--- a/dbt/profiles.yml
+++ b/dbt/profiles.yml
@@ -3,7 +3,7 @@ wse_project:
     dev:
       dataset: wse_dev
       fixed_retries: 1
-      keyfile: /.google/credentials/google_credentials.json
+      keyfile: /home/skibooj/.google/credentials/google_credentials.json
       location: europe-west6
       method: service-account
       priority: interactive
@@ -14,7 +14,7 @@ wse_project:
     prod:
       dataset: wse_prod
       fixed_retries: 1
-      keyfile: /.google/credentials/google_credentials.json
+      keyfile: /home/skibooj/.google/credentials/google_credentials.json
       location: europe-west6
       method: service-account
       priority: interactive
